tests/ui/illegal-sized-bound/mutability-mismatch-arg.stderr
error: the `min` method cannot be invoked on `&dyn Iterator<Item = &u64>`
  --> $DIR/mutability-mismatch-arg.rs:3:9
   |
LL |      *t.min().unwrap()
   |         ^^^
   |
help: you need `&mut dyn Iterator<Item = &u64>` instead of `&dyn Iterator<Item = &u64>`
   |
LL | fn test(t: &mut dyn Iterator<Item=&u64>) -> u64 {
   |             +++

error: aborting due to 1 previous error

